# PikiFamsGame

./: .gitignore  .gitmodules  CMakeLists.txt  GameCreator.cpp  GameCreator.h  gamebot.cpp  gamebot.h  main.cpp
CPP_project/: CMakeLists.txt  README.md  main.cpp
CPP_project/src/: CMakeLists.txt  gamebot.cpp  gamebot.h
CPP_project/tests/: CMakeLists.txt  Test_hd.h  Tests_PikiFamsGameBot.cpp  tests.cpp
FSharp_project/: PikiFamsFSharp.sln
FSharp_project/PikiFamsFSharp/: AssemblyInfo.fs  PikiFamsFSharp.fsproj  Program.fs
FSharp_project/PikiFamsFSharp/PikiFams/: PikiFamsGame.fs
src/: GameCreator.cpp  GameCreator.h  gamebot.cpp  gamebot.h  main.cpp
tests/: Test_hd.h  Tests_PikiFamsGameBot.cpp  combineTheBestStep_Tests.cpp  main.cpp  main_test.cpp
